--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "hugo"
   }
 }
