--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,15 @@
 backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
-media_folder: static/assets
-public_folder: /img
+site_url: "https://zastrow.co"
+display_url: "https://zastrow.co"
+media_folder: "static/assets"
+public_folder: "/assets"
+search: false
+slug:
+  encoding: "ascii"
+  clean_accents: true
+  sanitize_replacement: "-"
 collections:
   - name: 'posts'
     label: 'Posts'
