--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   branch: main # Branch to update (optional; defaults to master)
 site_url: "https://zastrow.co"
 display_url: "https://zastrow.co"
-media_folder: "static/assets"
+media_folder: "static/assets/**"
 public_folder: "/assets"
 search: false
 slug:
@@ -14,12 +14,18 @@ collections:
   - name: 'posts'
     label: 'Posts'
     folder: 'content/posts'
+    identifier_field: title
     create: true
+    delete: false
+    extension: md
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    preview_path: 'posts/{{slug}}'
     editor:
       preview: false
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
+      - label: 'Title'
+        name: 'title'
+        widget: 'string'
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
