--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,18 +14,32 @@ collections:
   - name: 'posts'
     label: 'Posts'
     folder: 'content/posts'
-    identifier_field: title
+    identifier_field: id
     create: true
     delete: false
     extension: md
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
-    preview_path: 'posts/{{slug}}'
+    slug: '{{slug}}'
+    preview_path: 'posts/{{year}}-{{month}}-{{day}}-{{slug}}'
     editor:
       preview: false
     fields:
       - label: 'Title'
         name: 'title'
         widget: 'string'
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - label: 'Identifier'
+        name: 'id'
+        widget: 'number'
+        value_type: 'int'
+        min: 1001
+        step: 1
+      - label: 'Publish Date'
+        name: 'date'
+        widget: 'datetime'
+      - label: 'Description'
+        name: 'description'
+        widget: 'string'
+      - label: 'Body'
+        name: 'body'
+        widget: 'markdown'
+      - name: url
+        default: '/{{year}}/{{month}}/{{day}}/{{slug}}'
