--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -26,6 +26,7 @@ collections:
       - label: 'Title'
         name: 'title'
         widget: 'string'
+        required: false
       - label: 'Identifier'
         name: 'id'
         widget: 'number'
@@ -38,6 +39,7 @@ collections:
       - label: 'Description'
         name: 'description'
         widget: 'string'
+        required: false
       - label: 'Body'
         name: 'body'
         widget: 'markdown'
