--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ languageCode: en-us
 title: Philip Zastrow
 
 params:
-  description: "Philip Zastrow: Frontend Design Engineer, Web Accessibility Specialist, Writer, Speaker, et al"
+  description: "Philip Zastrow: Designer, Developer, Programmer, Web Accessibility Specialist, Writer, Speaker, et al"
 
 Author:
   name: Philip Zastrow
