feat: self-hosted video thumbnails

--- a/data/videos.yml
+++ b/data/videos.yml
@@ -1,17 +1,23 @@
 - title: Copacetic Collaboration
   ytcode: kHJ-BTPnhFI
+  image: copacetic-collaboration.png
 
 - title: Four Tips for Accessible Color Contrast
   ytcode: YaVK6wcWEpw
+  image: four-tips.png
 
 - title: Working with Accessibility Assistance Tools
   ytcode: hXzIZmVtSMc
+  image: working-with-a11y-tools.png
 
 - title: Web Design and Accessible Color Contrast
   ytcode: 36c6DwEXiNQ
+  image: accessible-color-contrast.png
 
 - title: Introduction to CSS
   ytcode: tjw-UWNQjmo
+  image: intro-to-css.png
 
 - title: Container-based RWD with Element Queries
   ytcode: aYPX76NWM1o
+  image: css-dev-conf.jpg
