update fonts and add article

--- a/data/external_articles.yml
+++ b/data/external_articles.yml
@@ -1,3 +1,8 @@
+- title: "How Dedicated Frontend Design Helps Achieve a Minimal Viable Product"
+  source: Sparkbox
+  link: "https://sparkbox.com/foundry/frontend_designers_help_deliver_mininum_viable_products_they_do_both_design_and_development"
+  date: 2023-04-19
+
 - title: "Designing with Accessible Color Contrast on the Web"
   source: Sparkbox
   link: "https://sparkbox.com/foundry/web_design_color_contrast_accessible_web_colors"
