fix font weights

--- a/data/projects.yml
+++ b/data/projects.yml
@@ -1,5 +1,5 @@
 -
-  name: "2022 Design Systems Survey"
+  name: "2022 Design Systems&nbsp;Survey"
   desc: "The fifth edition of the survey featured a fantastic design by [Jeremy Loyd](https://www.jloyd.net/). I was thrilled to help develop this site with highlights being the CSS-based charts, an extensive use of CSS custom properties, and versatile grid system built for the design."
   stats:
     - type: "Project Lead"
@@ -25,7 +25,7 @@
       link: "https://ozinga.com"
 
 -
-  name: "University of Georgia Office of Online Learning Design Sysem"
+  name: "University of Georgia Office of Online Learning Design&nbsp;System"
   desc: "I worked with my team at Sparkbox to audit existing web properties, research, and plan a platform-agnostic design system for Office of Online Learning that could grow and be adopted by the whole University. I updated the design of components to match UGA’s brand guide and lead the development effort to build the system."
   stats:
     - type: "Project Lead"
@@ -43,7 +43,7 @@
       link: "https://sparkbox.com/work/uga"
 
 -
-  name: "2019 Design Systems Survey"
+  name: "2019 Design Systems&nbsp;Survey"
   desc: "For the second design system survey site, I lead the design effort which involved bringing in digital artist James White to create a custom work that would be the header of the website. The artwork drove the synth-wave aesthetic and provided opportunities for fitting animations."
   stats:
     - type: "Project Lead"
@@ -70,7 +70,7 @@
       link: "https://sparkbox.com/work/aperian-global"
 
 -
-  name: "University of Notre Dame 2012 Redesign"
+  name: "University of Notre Dame 2012&nbsp;Redesign"
   desc: "Though nearly a decade old, the design for the University of Notre Dame website is one of the highlights of my career as a designer. I worked at ND for just under a year when I was tasked with designing and help developing a complete reworking of the University’s then six-month old website."
   stats:
     - type: "Planning"
