--- a/data/videos.yml
+++ b/data/videos.yml
@@ -2,22 +2,22 @@
   ytcode: kHJ-BTPnhFI
   image: copacetic-collaboration.png
 
-- title: Four Tips for Accessible Color Contrast
+- title: Four Tips for Accessible Color&nbsp;Contrast
   ytcode: YaVK6wcWEpw
   image: four-tips.png
 
-- title: Working with Accessibility Assistance Tools
+- title: Working with Accessibility Assistance&nbsp;Tools
   ytcode: hXzIZmVtSMc
   image: working-with-a11y-tools.png
 
-- title: Web Design and Accessible Color Contrast
+- title: Web Design and Accessible Color&nbsp;Contrast
   ytcode: 36c6DwEXiNQ
   image: accessible-color-contrast.png
 
-- title: Introduction to CSS
+- title: Introduction to&nbsp;CSS
   ytcode: tjw-UWNQjmo
   image: intro-to-css.png
 
-- title: Container-based RWD with Element Queries
+- title: Container-based RWD with Element&nbsp;Queries
   ytcode: aYPX76NWM1o
   image: css-dev-conf.jpg
