feat: Add new article

--- a/data/external_articles.yml
+++ b/data/external_articles.yml
@@ -1,3 +1,8 @@
+- title: Yes, You Can Integrate AI into Your Legacy Site (with Emma Litwa-Vulcu)
+  source: Sparkbox
+  link: "https://sparkbox.com/foundry/ai_large_language_model_project_mvp_ai_chat_for_elearning_with_frontend_and_backend_development"
+  date: 2023-08-23
+
 - title: "How Dedicated Frontend Design Helps Achieve a Minimal Viable Product"
   source: Sparkbox
   link: "https://sparkbox.com/foundry/frontend_designers_help_deliver_mininum_viable_products_they_do_both_design_and_development"
